# iam-platform

./: .env  Cargo.toml  README.md  docker-compose.yml
migrations/: 20260627063655_create_users_table.sql  20260627063823_create_organizations_table.sql  20260627063904_create_roles_and_permissions.sql  20260627063957_create_sessions_and_api_keys.sql
src/: config.rs  db.rs  errors.rs  jwt.rs  main.rs  middleware.rs
src/models/: org.rs  user.rs
src/routes/: mod.rs  org.rs
src/routes/auth/: mod.rs
