[package]
name = "iam-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "chrono", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# JWT
jsonwebtoken = "9"

# Password hashing
argon2 = "0.5"

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Environment variables
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }