[package]
name = "iam-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.8"

# Async runtime (axum needs this)
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "migrate"] }

# JSON serialization/deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Password hashing
argon2 = "0.5"

# JWT tokens
jsonwebtoken = "9"

# Unique IDs
uuid = { version = "1", features = ["v4", "serde"] }